hn_tests/failing/allDigits-x.hn
allDigits ss = {
	firstFailure = {
		loopCond s = deref s
		loopCond ss
	}
	eq firstFailure 0
}